Bug 122221 - PNG images with alpha don't show up in .odp documents
Summary: PNG images with alpha don't show up in .odp documents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-20 12:37 UTC by How can I remove my account?
Modified: 2019-06-20 21:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample document (64.43 KB, application/vnd.oasis.opendocument.presentation)
2018-12-20 12:37 UTC, How can I remove my account?
Details

Note You need to log in before you can comment on or make changes to this bug.
Description How can I remove my account? 2018-12-20 12:37:28 UTC
Created attachment 147695 [details]
Sample document

Open an OpenDocument presentation (.odp) that has a PNG image with alpha embedded in it. It won't show up.

Interestingly, rotating the image just a bit makes it show up.

Clearly the problem is somewhere in vcl, and it is iOS-specific.

The sample document has two PNG images, one without alpha, one with. Only the first one shows up.
Comment 1 Aron Budea 2018-12-21 11:03:05 UTC
Confirmed.

LOOLWSD master.. (git hash: b0b2c01a)
LOKit   Collabora Office 6.0-18 (git hash: 1913dcc)
Comment 2 How can I remove my account? 2018-12-26 13:57:38 UTC
As this is an iOS-specific problem, it is probably not useful to add it to that meta bug of cross-platform Impress bugs.
Comment 3 How can I remove my account? 2019-06-04 11:54:54 UTC
It is possible that the same root cause also prevents TIFF images in .pptx from showing up (once another bug in VCL has been fixed).
Comment 4 How can I remove my account? 2019-06-04 11:56:24 UTC
(At least the symptoms are the same, if one selects the image that is not displayed, and rotates a bit, it does show up.)
Comment 5 Commit Notification 2019-06-04 17:59:50 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9c8478d428293c6223c8d1bdd1e93f7729b6d952%5E%21

tdf#122221: Bin apparently unnecessary early return

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 How can I remove my account? 2019-06-04 20:00:57 UTC
Together with an earlier commit that was not marked with tdf#122221, the bug now seems fixed. (Both commits are also in the cp-6.0 branch.)
Comment 7 Commit Notification 2019-06-20 21:54:05 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/b0f9715174dc0001b2e738bd230f496432ab5ac6%5E%21

tdf#122221: Bin apparently unnecessary early return

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.