tdf#122221: Bin apparently unnecessary early return

Removing these few lines of code fixes the problem on iOS, and has no
apparent ill effect on macOS. But sure, I didn't check that thoroughly
on macOS, so in case this has a bad effect on macOS after all, need to
reinstate the few lines but make them #ifndef IOS.

(Still passes make check.)

Change-Id: I2380d010ba223a698acfe916fca4580a1502be98
Reviewed-on: https://gerrit.libreoffice.org/73470
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>